--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.12.4",
-    "body-parser": "^1.15.2",
+    "express": "^4.16.4",
+    "body-parser": "^1.18.3",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.1"
   },
   "engines": {
-    "node": "^10.0.0"
+    "node": "10.0.0"
   },
   "repository": {
     "type": "git",
